--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="https://cdn.vectorstock.com/i/1000v/38/47/sport-car-logo-design-fast-silhouette-icon-vector-48573847.avif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Review Component</title>
+    <title>Projects Vault</title>
   </head>
   <body>
     <div id="root"></div>
